# BitCUP

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  SECURITY.md  config.status  configure  configure.ac  libbitcupconsensus.pc  libbitcupconsensus.pc.in  libtool
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
ISSUE_TEMPLATE/: good_first_issue.md
autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.3
contrib/: README.md  bitcup-cli.bash-completion  bitcup-qt.pro  bitcup-tx.bash-completion  bitcupd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  bitcup-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  instantsend.md  masternode-budget.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile  Makefile.am  Makefile.in  bitcup-cli.1  bitcup-qt.1  bitcup-tx.1  bitcup-wallet.1  bitcupd.1
share/: setup.nsi  setup.nsi.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  hash.h  (+40 more)
(+986 files in other folders)
